nextcloud/network-policy-nextcloud-allow-ingress-to-mysql-nextcloud-sidecar-from-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nextcloud-allow-ingress-to-mysql-nextcloud-sidecar-from-monitoring
  namespace: nextcloud
spec:
  podSelector:
    matchLabels:
      app: mysql-nextcloud
      tier: mysql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9104
